--- a/TestWeather/Views/DayWeatherCell/DayWeatherTableViewCell.xib
+++ b/TestWeather/Views/DayWeatherCell/DayWeatherTableViewCell.xib
@@ -1,21 +1,66 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="DayWeatherTableViewCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="dayCell" rowHeight="76" id="KGk-i7-Jjw" customClass="DayWeatherTableViewCell" customModule="TestWeather" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="318" height="60"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="318" height="60"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Day" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5XK-2u-31w">
+                        <rect key="frame" x="20" y="15" width="60" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="60" id="KIq-Yk-gFb"/>
+                            <constraint firstAttribute="height" constant="30" id="S1j-eD-ycP"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Temp" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r4s-sG-vvH">
+                        <rect key="frame" x="90" y="15" width="158" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="30" id="mfS-fk-cZc"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3g4-VT-dWj">
+                        <rect key="frame" x="258" y="10" width="40" height="40"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="40" id="2q5-JR-YLF"/>
+                            <constraint firstAttribute="width" secondItem="3g4-VT-dWj" secondAttribute="height" multiplier="1:1" id="px0-2V-rfW"/>
+                        </constraints>
+                    </imageView>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="r4s-sG-vvH" firstAttribute="leading" secondItem="5XK-2u-31w" secondAttribute="trailing" constant="10" id="D85-eQ-8q2"/>
+                    <constraint firstItem="3g4-VT-dWj" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="GBR-oL-yEi"/>
+                    <constraint firstAttribute="trailing" secondItem="3g4-VT-dWj" secondAttribute="trailing" constant="20" id="UyV-AG-d2R"/>
+                    <constraint firstItem="3g4-VT-dWj" firstAttribute="leading" secondItem="r4s-sG-vvH" secondAttribute="trailing" constant="10" id="Z94-1w-cTI"/>
+                    <constraint firstItem="r4s-sG-vvH" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="b0a-Ix-5ZK"/>
+                    <constraint firstItem="5XK-2u-31w" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="mT7-eC-RQH"/>
+                    <constraint firstItem="5XK-2u-31w" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="xic-pA-Tsa"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="dayNameLabel" destination="5XK-2u-31w" id="rmx-pI-AgU"/>
+                <outlet property="iconImageView" destination="3g4-VT-dWj" id="pYh-OY-n34"/>
+                <outlet property="tempLabel" destination="r4s-sG-vvH" id="0qa-Sa-HMH"/>
+            </connections>
+            <point key="canvasLocation" x="136.23188405797103" y="103.125"/>
         </tableViewCell>
     </objects>
 </document>
