--- a/TestWeather/Views/HourlyWeatherCell/HourlyWeatherCollectionViewCell.xib
+++ b/TestWeather/Views/HourlyWeatherCell/HourlyWeatherCollectionViewCell.xib
@@ -1,21 +1,63 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="HourlyWeatherCollectionViewCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="hourlyCell" id="gTV-IL-0wX" customClass="HourlyWeatherCollectionViewCell" customModule="TestWeather" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="80" height="140"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                <rect key="frame" x="0.0" y="0.0" width="80" height="140"/>
+                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <subviews>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="L9C-HV-saV">
+                        <rect key="frame" x="15" y="62" width="50" height="50"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="50" id="UqU-uC-eKX"/>
+                            <constraint firstAttribute="width" secondItem="L9C-HV-saV" secondAttribute="height" multiplier="1:1" id="vFa-cK-PQK"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0°" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uaL-pb-yTJ">
+                        <rect key="frame" x="0.0" y="112" width="80" height="18"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="O'clock" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jas-Wa-2We">
+                        <rect key="frame" x="0.0" y="10" width="80" height="20"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="20" id="eJ3-L1-QYh"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
+            <constraints>
+                <constraint firstAttribute="trailing" secondItem="uaL-pb-yTJ" secondAttribute="trailing" id="CZF-Pd-Wut"/>
+                <constraint firstItem="L9C-HV-saV" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="DAU-ih-MFY"/>
+                <constraint firstItem="jas-Wa-2We" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="IyH-M0-cRE"/>
+                <constraint firstItem="uaL-pb-yTJ" firstAttribute="top" secondItem="L9C-HV-saV" secondAttribute="bottom" id="JgL-dO-aqH"/>
+                <constraint firstItem="uaL-pb-yTJ" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="Z8f-kS-eRm"/>
+                <constraint firstAttribute="bottom" secondItem="uaL-pb-yTJ" secondAttribute="bottom" constant="10" id="mQX-2b-ai0"/>
+                <constraint firstAttribute="trailing" secondItem="jas-Wa-2We" secondAttribute="trailing" id="sdm-e2-0wG"/>
+                <constraint firstItem="jas-Wa-2We" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="10" id="tVC-xq-9fa"/>
+            </constraints>
+            <connections>
+                <outlet property="iconImageView" destination="L9C-HV-saV" id="vi7-tv-SqO"/>
+                <outlet property="oclockLabel" destination="jas-Wa-2We" id="hff-s0-3H6"/>
+                <outlet property="tempLabel" destination="uaL-pb-yTJ" id="SP5-9v-2X5"/>
+            </connections>
+            <point key="canvasLocation" x="137.68115942028987" y="97.767857142857139"/>
         </collectionViewCell>
     </objects>
 </document>
